--- a/index.html
+++ b/index.html
@@ -624,8 +624,8 @@
             <textarea placeholder="Enter the text"></textarea>
           </div>
 
-          <div class="input-container terms-container">
-            <label class="check option">
+          <div class="terms-container">
+            <label class="check">
               <input class="check__input" type="checkbox" />
               <span class="check__box"></span>
               I agree with the letter and accept the
