adding size and cusor pointer to modal

--- a/index.html
+++ b/index.html
@@ -626,8 +626,7 @@
 
           <div class="terms-container">
             <label class="check">
-              <input class="check__input" type="checkbox" />
-              <span class="check__box"></span>
+              <input type="checkbox" class="check__input" />
               I agree with the letter and accept the
               <a href="#">Terms and Conditions</a>
             </label>
