Fixing svg checkbox to display

--- a/index.html
+++ b/index.html
@@ -656,9 +656,10 @@
           <div class="terms-container">
             <label class="check">
               <input type="checkbox" class="check__input" value="Checked" id="check-input"/>
-              <svg class="icon-checkbox">
-                <use href="/images/symbol-defs.svg#icon-icon-check"></use>
-              </svg>
+              <span class="checkbox">
+                <svg class="icon-checkbox">
+                <use href="./images/symbol-defs.svg#icon-check" ></use>
+              </svg></span>
               
               I agree with the letter and accept the
               <a href="#">Terms and Conditions</a>
